--- a/src/test/resources/taac-model.yml
+++ b/src/test/resources/taac-model.yml
@@ -9,24 +9,28 @@ assets:
 elements:
 	- interactor
 		name: User
+		type: interactor
 		produced-assets:
 			- personal-data
 			- image-file
 			- comments
 	- proxy-server
 		name: Proxy Server
+		type: proxy-server
 		processed-assets:
 			- personal-data
 			- image-file
 			- comments
 	- web-server
 		name: API Server
+		type: web-server
 		processed-assets:
 			- personal-data
 			- image-file
 			- comments
 	- database
 		name: PostgreSQL
+		type: database
 		stored-assets:
 			- personal-data
 			- image-file
