--- a/src/test/resources/threats-provider-test.yml
+++ b/src/test/resources/threats-provider-test.yml
@@ -15,6 +15,7 @@ rules: # some comment 2
     severity: Medium
     categories: information-disclosure
     expression: flow crosses demilitarized-zone
+    exclude: flow.inScope == false
     description: threat description 2
     remediation: threat 2 remediation practices
 # just a comment 2
