classpath reader fix, report edit, embedded library edit, CLI scripts add, notice file add

--- a/src/test/resources/threat-model-engine-context-test.yml
+++ b/src/test/resources/threat-model-engine-context-test.yml
@@ -75,7 +75,7 @@ data-flows:
 		title: Database query
 		authentication-method: credentials
 		authorization: admin
-		encryption: yes
+		encryption: no
 		account-management: local-account
 		transferred-assets:
 			- personal-data
