--- a/src/main/resources/threats-library/default-threats-library.yml
+++ b/src/main/resources/threats-library/default-threats-library.yml
@@ -2,3 +2,11 @@ name: Default Threats Library
 version: 1.0.0
 
 rules:
+  - information-discosure-in-transit
+    title: Information Disclosure and Tampering in Transit for {flow.name}
+    severity: High
+    categories: information-disclosure, tampering
+    expression: flow.encryption == no
+    exclude: flow.inScope == false
+    description: In network eavesdropping attacks, hackers look for weak connections between clients and servers. By exploiting these weak connections, hackers intercept data packets traversing the network. Any network, web or email traffic, if not encrypted, can be read by the hacker.
+    remediation: Ensure strong TLS is configured for the {flow.name} connection
