--- a/src/main/resources/threats-library/default-threats-library.yml
+++ b/src/main/resources/threats-library/default-threats-library.yml
@@ -10,3 +10,12 @@ rules:
     exclude: flow.inScope == false
     description: In network eavesdropping attacks, hackers look for weak connections between clients and servers. By exploiting these weak connections, hackers intercept data packets traversing the network. Any network, web or email traffic, if not encrypted, can be read by the hacker.
     remediation: Ensure strong TLS is configured for the {flow.name} connection
+
+  - information-discosure-at-rest
+    title: Information Disclosure and Tampering at Rest for {target.name}
+    severity: High
+    categories: information-disclosure, tampering
+    expression: (target.type == database) and (target.storedAssets contain sensitive)
+    exclude: flow.inScope == false
+    description: In case if an attacker can access lost, stolen, or inappropriately decommissioned hardware, the sensitive assets stored in {target.name} will be compromised
+    remediation: 1. Ensure sensitive information is encrypted at rest level in {target.name} using recommended algorithms 2. Ensure encryption keys are properly protected (for example, stored at Vault)
