--- a/src/main/resources/threats-library/default-threats-library.yml
+++ b/src/main/resources/threats-library/default-threats-library.yml
@@ -33,7 +33,7 @@ rules:
     title: Local account management on {target.name}
     severity: High
     categories: spoofing, elevation-of-privilege
-    expression: flow.accountManagement == localAccount
+    expression: (flow.accountManagement == localAccount) or (flow.accountManagement == undefined)
     exclude: (flow.inScope == false) or (source within demilitarized-zone) or (source within closed-perimeter)
     description: In case of inappropriate account management on {target.name} side (for example, if account credentials are stored at {target.name} configuration file), it can lead to weak password complexity or rotation issues, that can be used by an attacker to brute force the credentials or for accounts enumeration
     remediation: Consider transferring the responsibility of account management to centralized SSO or Identity and Access Management system
