--- a/src/test/resources/threat-model-engine-context-test.yml
+++ b/src/test/resources/threat-model-engine-context-test.yml
@@ -52,6 +52,7 @@ boundaries:
 		elements:
 			- legitimate-user
 data-flows:
+	- legitimate-user -> database
 	- legitimate-user -> proxy-server
 		title: Users Request
 		authentication-method: openid
